--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,7 +262,7 @@ h3 {
 
 /* Background */
 #intro.section {
-  background-color: #ccfae5;
+  background-color: #ffddfe;
   position: relative;
 }
 
